fixed sidebar, text wont wrap anymore

--- a/app/assets/stylesheets/components/_sidebar.scss
+++ b/app/assets/stylesheets/components/_sidebar.scss
@@ -9,7 +9,8 @@
     background-color: rgba(17, 17, 17, 0.8); /* Black*/
     overflow-x: hidden; /* Disable horizontal scroll */
     padding-top: 60px; /* Place content 60px from the top */
-    transition: 0.5s; /* 0.5 second transition effect to slide in the sidenav */
+    transition: 0.5s;
+    white-space: nowrap;
   }
   
   /* The navigation menu links */
